--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
                 ctx.translate(canvas.width/2, canvas.height/2);
                 var scale = 10;
                 ctx.scale(scale, scale);
-                ctx.translate(-game.player.pos.x, -game.player.pos.y);
+                ctx.translate(-game.player.posSmooth.x, -game.player.posSmooth.y);
                 ctx.lineWidth = 0.1;
                 for(var i = 0; i <= game.level.length; i += game.level.length){
                     ctx.beginPath();
@@ -100,8 +100,8 @@
                 imagedata = offctx.createImageData(viewRadius*2, viewRadius*2);
                 pixels = new Uint32Array(imagedata.data.buffer);
                 var pos = {
-                    x: Math.floor(game.player.pos.x),
-                    y: Math.floor(game.player.pos.y)
+                    x: game.player.pos.x,
+                    y: game.player.pos.y
                 };
                 for(var i = 0; i < viewRadius*2; ++i){
                     for(var j = 0; j < viewRadius*2; ++j){
@@ -136,11 +136,11 @@
                     var p = game.players[Object.keys(game.players)[i]];
                     ctx.fillStyle = "#" + p.id;
                     ctx.beginPath();
-                    ctx.arc(p.pos.x, p.pos.y, radius, 0, 2*Math.PI);
+                    ctx.arc(p.posSmooth.x, p.posSmooth.y, radius, 0, 2*Math.PI);
                     ctx.fill();
                     ctx.strokeStyle = "black";
                     ctx.beginPath();
-                    ctx.arc(p.pos.x, p.pos.y, radius, 0, 2*Math.PI);
+                    ctx.arc(p.posSmooth.x, p.posSmooth.y, radius, 0, 2*Math.PI);
                     ctx.stroke();
                 }
                 if(debug) drawDebug();
@@ -154,7 +154,7 @@
                     return;
                 }
                 game.updateFighters(data.newFighters, data.oldFighters);
-                game.update(data.players, data.player, data.seed);
+                game.update(data.players, data.players[data.player], data.seed);
                 draw();
             };
             ctx.imageSmoothingEnabled = false;
